--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -284,7 +284,12 @@ svg {
 
 #thirdRowBox {
   display: flex;
-  justify-content: center;
+  justify-content: space-between; /* Adjust as needed */
+  align-items: center; /* Adjust as needed */
+}
+#thirdRowBox #unresolvedTicket,
+#thirdRowBox #task {
+  transform: translateX(15%);
 }
 
 #unresolvedTicket {
@@ -555,8 +560,6 @@ input[type=checkbox]::before {
   #task {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
   }
   #task li {
     width: 33vw;
