--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -317,7 +317,7 @@ svg {
 }
 
 // Third Content Row ----------------------------------------
-#thirdRow{
+#thirdRow {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -326,7 +326,13 @@ svg {
 
 #thirdRowBox {
     display: flex;
-    justify-content: center;
+    justify-content: space-between; /* Adjust as needed */
+    align-items: center; /* Adjust as needed */
+
+    #unresolvedTicket,
+    #task {
+        transform: translateX(15%);
+    }
 }
 
 #unresolvedTicket {
@@ -626,8 +632,6 @@ input[type="checkbox"]::before {
     #task {
         display:flex;
         flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
 
         li {
             width:33vw ;
