--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -126,6 +126,13 @@ body {
   margin-left: 30px;
 }
 
+#overviewHeader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .overview {
   margin-top: 60px;
 }
@@ -143,10 +150,13 @@ body {
   letter-spacing: 0.3px;
 }
 
-#profile {
-  margin-top: 60px;
+.profile {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-#profile p {
+.profile p {
   color: #252733;
   text-align: right;
   font-family: "Mulish";
@@ -280,16 +290,14 @@ svg {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  width: 100vw;
 }
 
 #thirdRowBox {
   display: flex;
-  justify-content: space-between; /* Adjust as needed */
-  align-items: center; /* Adjust as needed */
-}
-#thirdRowBox #unresolvedTicket,
-#thirdRowBox #task {
-  transform: translateX(15%);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #unresolvedTicket {
@@ -297,7 +305,7 @@ svg {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 80vw;
+  width: 95vw;
   height: 50vh;
   margin-bottom: 30px;
   padding-left: 0;
@@ -382,7 +390,7 @@ svg {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 80vw;
+  width: 95vw;
   height: auto;
   margin-bottom: 30px;
   padding-left: 0;
@@ -538,15 +546,24 @@ input[type=checkbox]::before {
   .navbar {
     display: none;
   }
+  #thirdRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 82vw;
+    padding-left: 0;
+    padding-right: 0;
+  }
   #thirdRowBox {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 69vw;
+    align-items: center;
     margin: 0;
   }
   #unresolvedTicket, #task {
-    width: 33vw;
+    width: 39.5vw;
     height: 336px;
   }
   .unresolvedTicketContents {
